new data, fix issue with rounding on walking to station test